# tape

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  comparison.md  cookbook.md  v0_2_roadmap.md
examples/: README.md  dice.tape  flaky-failed.tape  flaky.tape  greet.tape  heartbeat.tape
examples/scripts/: coinflip.tape  hello.tape
src/: diff.rs  error.rs  event.rs  inspect.rs  lib.rs  main.rs  programs.rs  recording.rs  replaying.rs  runtime.rs  stats.rs
src/lang/: ast.rs  interp.rs  lexer.rs  mod.rs  parser.rs
tests/: diff.rs  effects.rs  kernel.rs  lang.rs  outcome.rs  stats_inspect.rs
